--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
+{% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+<div class="page-content">
+	<div class="wrapper">
+		{{ content }}
 
-    {% include footer.html %}
+		{% include comments.html %}
+	</div>
+</div>
 
-  </body>
+{% include footer.html %}
+
+</body>
 
 </html>
