--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -2,12 +2,15 @@
 layout: default
 ---
 <h2 class="post_title">{{page.title}}</h2>
-<ul>
+<ul class="post-list">
 	{% for post in site.posts %}
 	{% for tag in post.tags %}
 	{% if tag == page.tag %}
 	<li>
-		<h3><a href='{{post.url}}'>{{post.title}}</a></h3>
+		<h2>
+			          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+	    </h2>
+
 		 <p class="post-meta">{{ post.date | date: "%b %-d, %Y" }}{% if post.author %} • {{ post.author }}{% endif %}{% if post.meta %} • {{ post.meta }}{% endif %}</p>
 		<ul>
 			{% for tag in post.tags %}
