--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 		{% if forloop.first %}
     	Tags:
 		{% endif %}
-		<a href="{{ site.url }}/tag/{{ tag }}" title="Index for {{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}
+		<a href="{{ site.url }}/tag/{{ tag }}" title="Index for {{ tag }}">{{ tag }}</a>{% if forloop.last == false %} • {% endif %}
 		{% endfor %}
 		</p>
 	</header>
@@ -18,5 +18,6 @@ layout: default
 	<article class="post-content">
 		{{ content }}
 	</article>
+ {{% include share.html %}}
 
 </div>
